<resources>
    <string name="app_name">MovieApp</string>
    <string name="error_loading_data">Invalid user or password. Please check your credentials</string>
    <string name="user">User</string>
    <string name="user_hint">E-mail</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="btn_log_in">Log in</string>
    <string name="company_logo_desc">Company logo</string>
    <string name="tv_login">Login</string>
    <string name="error_loading_movies">Error loading information. Please try again later.</string>
    <string name="menu_label_popular">Popular</string>
    <string name="menu_label_top_rated">Top rated</string>
    <string name="menu_label_upcoming">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>