<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable
            name="loginVM"
            type="com.andrew.movieapp.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        tools:context=".ui.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/layout_background"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/iv_background"
                app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal4"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical5"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical4"
                app:layout_constraintTop_toTopOf="@id/guideline_horizontal3">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/company_logo_desc"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:background="@drawable/shadow_border_layout"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_login"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:gravity="center_vertical|center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_user"/>

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/user"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_login"
                app:layout_constraintBottom_toTopOf="@+id/et_user"/>

            <EditText
                android:id="@+id/et_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="start"
                android:hint="@string/user_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="20"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textSize="16sp"
                android:text="@{loginVM.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/password"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:textSize="16sp"
                android:text="@{loginVM.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_log_in"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical6"
            app:layout_constraintEnd_toEndOf="@+id/guideline_vertical7"
            app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal6"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal7"/>


        <TextView
            android:id="@+id/tv_error"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>